# UpdateDeliverySystem

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
build_support/: source_layout.rs
src/: auth.rs  build_info.rs  changelog.rs  cluster.rs  config.rs  errors.rs  lib.rs  logging.rs  main.rs  models.rs  routes.rs  security.rs  self_update.rs  server_configure.rs  stats.rs  storage.rs  tls.rs
src/application/: mod.rs
src/client/: api.rs  config.rs  import.rs  prompts.rs
src/client/prompts/: mod.rs  updates.rs
src/config/: cli.rs  mod.rs
src/routes/: mod.rs  routers.rs
src/server_configure/: mod.rs
tests/: cli.rs  source_layout.rs
tests/fixtures/source_layout/: attributes.rs.txt  documented.rs.txt  non_members.rs.txt  violations.rs.txt
