[package]
name = "update_delivery_system"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Update Delivery System for MindWork AI Studio"

[[bin]]
name = "uds"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
directories = "6"
futures-util = "0.3"
flexi_logger = { version = "0.31", default-features = false }
hex = "0.4"
inquire = "0.9"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["catch-panic", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
